--- a/ProyectoG6/src/main/resources/application.properties
+++ b/ProyectoG6/src/main/resources/application.properties
@@ -3,9 +3,9 @@
 spring.mvc.view.prefix = /WEB-INF/
 
 #configuracion base datos con las credenciales de LARAGOR (u otro)
-#spring.datasource.url=jdbc:mysql://localhost:3306/sistemag1
-#spring.datasource.username=Matias
-#spring.datasource.password=Admin1234
+#spring.datasource.url=jdbc:mysql://localhost:3306/KidsD&D
+#spring.datasource.username=Mich
+#spring.datasource.password=Pizza144
 
 #crear o actualizar tablas
 #create drop elimina, crea y elimina tabla
