--- a/ProyectoG6/src/main/resources/application.properties
+++ b/ProyectoG6/src/main/resources/application.properties
@@ -1,14 +1,14 @@
-# server.port=9080 en caso de que el 8080 este ocupado, se puede usar otro
-# PARA ACCEDER A LOS ARCHIVOS JSP SE EJECUTA LA SIGUIENTE LINEA
+#Acceder a los .jsp
 spring.mvc.view.prefix = /WEB-INF/
 
-#configuracion base datos con las credenciales de LARAGOR (u otro)
-#spring.datasource.url=jdbc:mysql://localhost:3306/KidsD&D
-#spring.datasource.username=Mich
-#spring.datasource.password=Pizza144
+
+#configuracion base datos
+spring.datasource.url=jdbc:mysql://localhost:3306/generationg6kidsdnd
+spring.datasource.username=Mich
+spring.datasource.password=Pizza144
 
 #crear o actualizar tablas
-#create drop elimina, crea y elimina tabla
-#update te la crea y/o actualiza
-#spring.jpa.hibernate.ddl-auto=create-drop
-#spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+
+#Mostra las queries
+spring.jpa.show-sql=true
