--- a/ProyectoG6/src/main/resources/application.properties
+++ b/ProyectoG6/src/main/resources/application.properties
@@ -10,7 +10,7 @@ spring.datasource.password=Admin1234
 #crear o actualizar tablas
 #create drop elimina, crea y elimina tabla
 #update te la crea y/o actualiza
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 
 #nos muestra las query
 spring.jpa.show-sql= true
