--- a/ProyectoG6/src/main/resources/application.properties
+++ b/ProyectoG6/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.mvc.view.prefix = /WEB-INF/
 
 #configuracion base datos con las credenciales de LARAGOR (u otro)
 spring.datasource.url=jdbc:mysql://localhost:3306/generationg6kidsdnd
-spring.datasource.username=paulino
+spring.datasource.username=Matias
 spring.datasource.password=Admin1234
 
 #crear o actualizar tablas
