--- a/ProyectoG6/src/main/resources/application.properties
+++ b/ProyectoG6/src/main/resources/application.properties
@@ -1,16 +1,23 @@
-server.port = 9090
-
-#Acceder a los .jsp
+ server.port=9080 
+# PARA ACCEDER A LOS ARCHIVOS JSP SE EJECUTA LA SIGUIENTE LINEA
 spring.mvc.view.prefix = /WEB-INF/
 
+#configuracion base datos con las credenciales de LARAGOR (u otro)
 
-#configuracion base datos
 spring.datasource.url=jdbc:mysql://localhost:3306/generationg6kidsdnd
 spring.datasource.username=Mich
 spring.datasource.password=Pizza144
 
+
+#spring.datasource.url=jdbc:mysql://localhost:3306/generationg6kidsdnd
+#spring.datasource.username=Matias
+#spring.datasource.password=Admin1234
+
+
 #crear o actualizar tablas
+#create drop elimina, crea y elimina tabla
+#update te la crea y/o actualiza
 spring.jpa.hibernate.ddl-auto=update
 
-#Mostra las queries
-spring.jpa.show-sql=true
+#nos muestra las query
+spring.jpa.show-sql= true
