--- a/ProyectoG6/src/main/resources/application.properties
+++ b/ProyectoG6/src/main/resources/application.properties
@@ -1,11 +1,18 @@
-# server.port=9080 en caso de que el 8080 este ocupado, se puede usar otro
+ server.port=9090
 # PARA ACCEDER A LOS ARCHIVOS JSP SE EJECUTA LA SIGUIENTE LINEA
 spring.mvc.view.prefix = /WEB-INF/
 
 #configuracion base datos con las credenciales de LARAGOR (u otro)
+
 spring.datasource.url=jdbc:mysql://localhost:3306/generationg6kidsdnd
-spring.datasource.username=Matias
-spring.datasource.password=Admin1234
+spring.datasource.username=Mich
+spring.datasource.password=Pizza144
+
+
+#spring.datasource.url=jdbc:mysql://localhost:3306/generationg6kidsdnd
+#spring.datasource.username=Matias
+#spring.datasource.password=Admin1234
+
 
 #crear o actualizar tablas
 #create drop elimina, crea y elimina tabla
