--- a/ProyectoG6/src/main/resources/application.properties
+++ b/ProyectoG6/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.mvc.view.prefix = /WEB-INF/
 
 #configuracion base datos con las credenciales de LARAGOR (u otro)
 
-spring.datasource.url=jdbc:mysql://localhost:3306/generationg6kidsdnd
+spring.datasource.url=jdbc:mysql://localhost:3306/semillitaDB
 spring.datasource.username=Mich
 spring.datasource.password=Pizza144*
 
@@ -22,6 +22,7 @@ spring.datasource.password=Pizza144*
 #create drop elimina, crea y elimina tabla
 #update te la crea y/o actualiza
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
 #nos muestra las query
 spring.jpa.show-sql= true
