--- a/FRONTEND/semillita/package.json
+++ b/FRONTEND/semillita/package.json
@@ -8,9 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "bootstrap": "^5.2.0",
-    "express": "^4.18.1",
     "jquery": "^3.6.0",
-    "nodemon": "^2.0.19",
     "phaser": "^3.55.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.4.0",
@@ -18,12 +16,11 @@
     "react-router-dom": "^6.3.0",
     "web-vitals": "^2.1.4"
   },
-  "devDependencies": {
+  "devDependencies":{
     "react-scripts": "5.0.1"
   },
   "scripts": {
-    "start": "node index.js",
-    "devStart": "nodemon index.js",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
