--- a/ProyectoG6/src/main/resources/application.properties
+++ b/ProyectoG6/src/main/resources/application.properties
@@ -4,9 +4,9 @@ spring.mvc.view.prefix = /WEB-INF/
 
 #configuracion base datos con las credenciales de LARAGOR (u otro)
 
-spring.datasource.url=jdbc:mysql://localhost:3306/semillitaDB
-spring.datasource.username=Mich
-spring.datasource.password=Pizza144*
+#spring.datasource.url=jdbc:mysql://localhost:3306/semillitaDB
+#spring.datasource.username=Mich
+#spring.datasource.password=Pizza144*
 
 
 #spring.datasource.url=jdbc:mysql://localhost:3306/generationg6kidsdnd
@@ -14,9 +14,9 @@ spring.datasource.password=Pizza144*
 #spring.datasource.password=Admin1234
 
 
-#spring.datasource.url=jdbc:mysql://localhost:3306/generationg6kidsdnd
-#spring.datasource.username=paulino
-#spring.datasource.password=Admin1234
+spring.datasource.url=jdbc:mysql://localhost:3306/generationg6kidsdnd
+spring.datasource.username=paulino
+spring.datasource.password=Admin1234
 
 #crear o actualizar tablas
 #create drop elimina, crea y elimina tabla
