--- a/ProyectoG6/src/main/resources/application.properties
+++ b/ProyectoG6/src/main/resources/application.properties
@@ -4,9 +4,9 @@ spring.mvc.view.prefix = /WEB-INF/
 
 #configuracion base datos con las credenciales de LARAGOR (u otro)
 
-spring.datasource.url=jdbc:mysql://localhost:3306/semillitaDB
-spring.datasource.username=Mich
-spring.datasource.password=Pizza144*
+ spring.datasource.url=jdbc:mysql://localhost:3306/generationg6kidsdnd
+ spring.datasource.username=Mich
+ spring.datasource.password=Pizza144*
 
 
 #spring.datasource.url=jdbc:mysql://localhost:3306/generationg6kidsdnd
@@ -22,7 +22,6 @@ spring.datasource.password=Pizza144*
 #create drop elimina, crea y elimina tabla
 #update te la crea y/o actualiza
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
 #nos muestra las query
 spring.jpa.show-sql= true
